Update style.css - fixed overlapp idle_inhibtor and omarchy-update

--- a/config/v3/style.css
+++ b/config/v3/style.css
@@ -79,6 +79,7 @@ tooltip {
 
 #clock, #idle_inhibitor {
   margin-left: 8.75px;
+  margin: 2px;
 }
 
 .hidden {
